--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,14 @@
 * {
     margin: 0;
     padding: 0;
-    background: #330000;
+   
   }
+body{
+ background: #330000;
+
+}
+
+
   input[type=number] {
     height: fit-content;
     padding: 12px 20px;
